tests/paczka1/fuzzy1/71669103.err
Error in line 1: YUbyz6AC5 S372 67,1
Error in line 16: YUbyz6AC5 S853 70,4
Error in line 13: S396 S853 22,0
Error in line 20: GzOGHv S396 43,75
Error in line 17: YUbyz6AC5 S372 18,4
Error in line 24: 63Bs S372 52,3
